changed skill box font size to 16 to fix bug on small screens

--- a/src/index.css
+++ b/src/index.css
@@ -414,7 +414,7 @@ b {
 }
 
 .SkillBox>p {
-    font-size: 18px;
+    font-size: 16px;
 }
 
 .SkillBox:hover {
